--- a/Styles/joinedClassrooms.css
+++ b/Styles/joinedClassrooms.css
@@ -8,24 +8,182 @@
   box-shadow: 0px 0px 10px black;
   display: flex;
   flex-direction: column;
-  padding:20px;
+  padding:12px 20px;
 }
 
 .main-container1-title{
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 .row{
   border-bottom: 1px solid black;
   width: 100%;
-  margin-top: 9px;
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
 
 .classroom-container{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  max-height: 100%;
+  row-gap: 15px;
+  padding: 0 15px 0 0;
+}
 
+.classroom-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.classroom-container::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3); 
+  border-radius: 4px;
+}
+
+.classroom-container::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .classroom{
-
+  margin:0;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  cursor: pointer;
+  min-width: 600px;
 }
+
+.classroom-banner-container{
+  position: relative;
+  width: 100%;
+  height: 170px;
+  overflow: hidden;
+}
+
+.classroom-banner{
+  width:100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.classroom-overlay{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.classroom-title{
+  font-size: 30px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 900;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.classroom-desc{
+  flex:1;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 700;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.classroom-author{
+  margin-bottom: 10px;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-right: 10px;
+  font-weight: 700;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.author-profile{
+  position: absolute;
+  right: 20px;
+  top:calc(50% - 65px);
+  width:120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 25px black;
+  border: 2px solid white;
+  padding: 3px;
+}
+
+
+
+
+
+
+/* .classroom-banner-container {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.classroom-banner {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.classroom-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.classroom-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.classroom-desc {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+}
+
+.classroom-author {
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
+}
+
+.author-profile {
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+} */
